fix(actions): Let actions border overflow (#186)

--- a/src/components/actions/index.scss
+++ b/src/components/actions/index.scss
@@ -68,8 +68,8 @@
     justify-content: flex-end;
     margin: 1rem -1rem;
     padding: 0;
-    flex-wrap: wrap; 
-    overflow-x: hidden;
+    flex-wrap: wrap;
+    overflow-x: unset;
     box-shadow: none;
   }
 }
